@@ -4,6 +4,7 @@
 
 #include <decimal.h>
 #include <datetime.h>
+#include <ecpglib.h>
 
 #define SQLNOTFOUND 100
 
@@ -31,4 +32,7 @@ extern void rupshift(char *);
 
 extern int byleng(char *, int);
 extern void ldchar(char *, int, char *);
-	
+
+extern bool ECPGconnect_informix(int, const char *, const char *, const char *, const char *, int);
+extern void ECPG_informix_set_var(int, void *, int);
+extern void *ECPG_informix_get_var(int);
