@@ -359,6 +359,9 @@ main(int argc, char *const argv[])
 				/* and structure member lists */
 				memset(struct_member_list, 0, sizeof(struct_member_list));
 
+				/* and our variable counter for Informix compatibility */
+				ecpg_informix_var = 0;
+
 				/* finally the actual connection */
 				connection = NULL;
 				
